force-app/main/default/objects/netsuite_conn__Opportunity_Sync_Settings__c/fields/netsuite_conn__Channel_Account_Sync_Role__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Channel_Account_Sync_Role__c</fullName>
    <inlineHelpText>Specify the opportunity partner role, for which Channel Account sync should work. 
Example: Distributor,Contractor,VAR/Reseller etc..</inlineHelpText>
    <label>Channel Account Sync Role</label>
    <type>TextArea</type>
</CustomField>