force-app/main/default/objects/netsuite_conn__Opportunity_Sync_Settings__c/fields/netsuite_conn__Disable_Line_Item_Trigger__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Disable_Line_Item_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Line Item Trigger</label>
    <type>Checkbox</type>
</CustomField>