force-app/main/default/objects/netsuite_conn__Opportunity_Sync_Settings__c/fields/netsuite_conn__Enable_Team_Selling__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Enable_Team_Selling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Team Selling</label>
    <type>Checkbox</type>
</CustomField>