force-app/main/default/objects/netsuite_conn__Opportunity_Sync_Settings__c/fields/netsuite_conn__Sync_Without_Button__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Sync_Without_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Without Button</label>
    <type>Checkbox</type>
</CustomField>